--- a/src/main/resources/com/iaroslaveremeev/tablefx/main.fxml
+++ b/src/main/resources/com/iaroslaveremeev/tablefx/main.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" spacing="10.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="com.iaroslaveremeev.tablefx.HelloController">
+<VBox alignment="TOP_CENTER" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" spacing="10.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="com.iaroslaveremeev.tablefx.MainController">
    <children>
       <MenuBar>
         <menus>
