--- a/src/main/resources/com/iaroslaveremeev/tablefx/main.fxml
+++ b/src/main/resources/com/iaroslaveremeev/tablefx/main.fxml
@@ -13,10 +13,14 @@
           <Menu mnemonicParsing="false" text="File">
             <items>
               <MenuItem mnemonicParsing="false" onAction="#openUsers" text="Open" />
+                  <MenuItem mnemonicParsing="false" onAction="#generateUsers" text="Generate users" />
             </items>
           </Menu>
         </menus>
       </MenuBar>
-      <TableView fx:id="table" prefHeight="374.0" prefWidth="600.0" />
+      <TableView fx:id="table" prefHeight="374.0" prefWidth="600.0">
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy></TableView>
    </children>
 </VBox>
