--- a/src/main/resources/com/iaroslaveremeev/tablefx/main.fxml
+++ b/src/main/resources/com/iaroslaveremeev/tablefx/main.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" maxHeight="400.0" maxWidth="600.0" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.iaroslaveremeev.tablefx.MainController">
+<VBox alignment="TOP_CENTER" maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.iaroslaveremeev.tablefx.MainController">
    <children>
       <MenuBar>
         <menus>
@@ -19,7 +19,7 @@
           </Menu>
         </menus>
       </MenuBar>
-      <TableView fx:id="table" prefHeight="374.0" prefWidth="600.0">
+      <TableView fx:id="table" prefWidth="800.0" VBox.vgrow="ALWAYS">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy></TableView>
