--- a/src/main/resources/com/iaroslaveremeev/tablefx/mail.fxml
+++ b/src/main/resources/com/iaroslaveremeev/tablefx/mail.fxml
@@ -3,12 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.iaroslaveremeev.tablefx.SendMailController">
+<VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="440.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.iaroslaveremeev.tablefx.SendMailController">
    <children>
       <Label text="Mail subject">
          <font>
@@ -33,7 +34,7 @@
             <Insets top="10.0" />
          </VBox.margin>
       </Label>
-      <TextField fx:id="password" maxWidth="400.0" prefWidth="400.0" />
+      <PasswordField fx:id="password" maxHeight="20.0" maxWidth="400.0" prefHeight="200.0" prefWidth="400.0" />
       <Button mnemonicParsing="false" onAction="#send" text="Send mail">
          <VBox.margin>
             <Insets top="10.0" />
@@ -43,4 +44,10 @@
          </font>
       </Button>
    </children>
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
+   <padding>
+      <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
+   </padding>
 </VBox>
