--- a/src/main/resources/com/iaroslaveremeev/tablefx/mail.fxml
+++ b/src/main/resources/com/iaroslaveremeev/tablefx/mail.fxml
@@ -3,13 +3,12 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="440.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.iaroslaveremeev.tablefx.SendMailController">
+<VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="380.0" prefWidth="440.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.iaroslaveremeev.tablefx.conrollers.SendMailController">
    <children>
       <Label text="Mail subject">
          <font>
@@ -26,15 +25,6 @@
          </VBox.margin>
       </Label>
       <TextArea fx:id="messageText" maxWidth="400.0" prefHeight="200.0" prefWidth="400.0" />
-      <Label text="Password">
-         <font>
-            <Font size="16.0" />
-         </font>
-         <VBox.margin>
-            <Insets top="10.0" />
-         </VBox.margin>
-      </Label>
-      <PasswordField fx:id="password" maxHeight="20.0" maxWidth="400.0" prefHeight="200.0" prefWidth="400.0" />
       <Button mnemonicParsing="false" onAction="#send" text="Send mail">
          <VBox.margin>
             <Insets top="10.0" />
