--- a/src/main/resources/com/iaroslaveremeev/tablefx/password.fxml
+++ b/src/main/resources/com/iaroslaveremeev/tablefx/password.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.iaroslaveremeev.tablefx.conrollers.PasswordController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="130.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.iaroslaveremeev.tablefx.conrollers.PasswordController">
    <children>
       <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="Please enter the mail service password" wrapText="true">
          <font>
@@ -18,5 +18,10 @@
          </VBox.margin>
       </Label>
       <PasswordField fx:id="password" maxWidth="250.0" prefWidth="250.0" />
+      <Button mnemonicParsing="false" onAction="#enterPassword" text="Confirm">
+         <VBox.margin>
+            <Insets top="10.0" />
+         </VBox.margin>
+      </Button>
    </children>
 </VBox>
