--- a/src/main/resources/com/iaroslaveremeev/tablefx/password.fxml
+++ b/src/main/resources/com/iaroslaveremeev/tablefx/password.fxml
@@ -4,17 +4,27 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="130.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.iaroslaveremeev.tablefx.conrollers.PasswordController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.iaroslaveremeev.tablefx.conrollers.PasswordController">
    <children>
-      <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="Please enter the mail service password" wrapText="true">
+      <Label text="Please enter e-mail to send messages from">
          <font>
-            <Font size="16.0" />
+            <Font size="14.0" />
          </font>
          <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" />
+            <Insets bottom="10.0" top="10.0" />
+         </VBox.margin>
+      </Label>
+      <TextField fx:id="senderEmail" maxWidth="250.0" prefWidth="250.0" />
+      <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="Enter mail password for external apps" wrapText="true">
+         <font>
+            <Font size="14.0" />
+         </font>
+         <VBox.margin>
+            <Insets bottom="10.0" top="10.0" />
          </VBox.margin>
       </Label>
       <PasswordField fx:id="password" maxWidth="250.0" prefWidth="250.0" />
